Update install_tomcat.sh